# HuckelCode

./: .gitignore  HuckelCode.ipynb  README.md
huckelcode/: .yah  CMakeCache.txt  CMakeLists.txt  DOS_stuff.cpp  FMO_stuff.cpp  K_hamil.cpp  K_overlap_mat.cpp  Makefile  R_hamil.cpp  R_overlap_mat.cpp  avg_props.cpp  bands.cpp  bind.h  charge_mat.cpp  cmake_install.cmake  custom_profile_symbols  distance_mat.cpp  electrostat.cpp  fileio.cpp  genutil.cpp  globals.cpp  kpoints.cpp  main.cpp  matrices.cpp  memory.cpp  mod_mulliken.cpp  mov.cpp  mulliken.cpp  new3_fileio.cpp  postprocess.cpp  princ_axes.cpp  prototypes.h  recip_space.cpp  symmetry.cpp  transforms.cpp  zetas.cpp
huckelcode/f2c_files/: abfns.cpp  cboris.cpp  diag_paralleled.cpp  f2c.h
huckelcode/output/: marketmatrixwriter.cpp  marketmatrixwriter.h
input/: .yah  .~lock.5g52.pdb#  .~lock.Ligands_noHydrogens_withMissing_1_Instances.pdb#  .~lock.Titin-folded-monomer.pdb#  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Makefile  OpenBabelUtils.cpp  OpenBabelUtils.h  PdbParser.cpp  PdbParser.h  SettingsParser.cpp  SettingsParser.h  config_example  main.cpp
input/tests/: CMakeLists.txt  TestPdbParser.cpp  TestPdbParser.h  TestSettingsParser.cpp  TestSettingsParser.h  main.cpp
tests/input/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  OpenBabelUtils.cpp  PdbParser.cpp  PdbParser.h  SettingsParser.cpp  TestOpenBabelUtils.cpp  TestOpenBabelUtils.h  TestPdbParser.cpp  TestPdbParser.h  TestSettingsParser.cpp  TestSettingsParser.h  main.cpp
tests/input/include/ESBTL/: line_reader.h  line_selectors.h
(+11 files in other folders)
